--- a/hotels.html
+++ b/hotels.html
@@ -9,46 +9,45 @@
   </head>
 
   <body>
-
     <div class="all-content">
 
 <!-- Header -->
 
       <header class="main-header">
-
-        <nav class="main-navigation">
-
-          <a href="index.html"><img src="img/logo.png" width="" height="" alt="Логотип City of Sedona"></a>
-
-          <ul class="site-navigation">
-            <li><a href="information.html">Информация</a></li>
-            <li><a href="photo and video.html">Фото и видео</a></li>
-            <li><a href="state map.html">Карта штата</a></li>
-            <li class="site-navigation-current"><a href="hotels.html">Гостиницы</a></li>
+        <nav class="main-header__navigation">
+          <a href="index.html">
+            <img src="img/logo.png" width="" height="" alt="Логотип City of Sedona">
+          </a>
+          <ul class="main-header__site-navigation">
+            <li>
+              <a href="information.html">Информация</a>
+            </li>
+            <li>
+              <a href="photo and video.html">Фото и видео</a>
+            </li>
+            <li>
+              <a href="state map.html">Карта штата</a>
+            </li>
+            <li class="main-header__site-navigation_current">
+              <a href="hotels.html">Гостиницы</a>
+            </li>
           </ul>
-
         </nav>
-
       </header>
 
 <!-- Main -->
 
       <main>
-
         <section class="hotel-search-form">
           <h2 class="visually-hidden">Форма поиска</h2>
           <!-- Здесь будет форма -->
         </section>
-
         <section class="hotel-search-filters">
           <h2 class="visually-hidden">Фильтры поиска</h2>
           <!-- Здесь будет форма -->
         </section>
-
         <section class="hotel-search-results">
-
           <h2 class="visually-hidden">Результаты поиска</h2>
-
           <ul class="hotels-list">
             <li class="hotels-list-item">
               <img src="img/amara resort and spa.jpg" width="" height="" alt="Фотография отеля Amara resort and spa">
@@ -56,7 +55,8 @@
               <p>Гостиница</p>
               <p>От 4000 р</p>
               <a class="button button-blue" href="#">Подробнее</a>
-              <span class="button button-brown">Забронировать</span>
+              <a class="button button-brown" href="#">Забронировать</a>
+              <div class="4stars"></div>
               <span class="rating">Рейтинг: 8,5</span>
             </li>
             <li class="hotels-list-item">
@@ -65,7 +65,8 @@
               <p>Мотель</p>
               <p>От 3000 р</p>
               <a class="button button-blue" href="#">Подробнее</a>
-              <span class="button button-brown">Забронировать</span>
+              <a class="button button-brown" href="#">Забронировать</a>
+              <div class="3stars"></div>
               <span class="rating">Рейтинг: 8,9</span>
             </li>
             <li class="hotels-list-item">
@@ -74,38 +75,36 @@
               <p>Апартаменты</p>
               <p>От 2000 р</p>
               <a class="button button-blue" href="#">Подробнее</a>
-              <span class="button button-brown">Забронировать</span>
+              <a class="button button-brown" href="#">Забронировать</a>
+              <div class="2stars"></div>
               <span class="rating">Рейтинг: 9,2</span>
             </li>
           </ul>
-
         </section>
-
       </main>
 
 <!-- Footer -->
 
       <footer class="main-footer">
-
         <p class="hashtag">#visitsedona</p>
-
-        <div class="footer-social">
-          <ul>
-            <li><a class="social-button" href="">Twitter</a></li>
-            <li><a class="social-button" href="">Facebook</a></li>
-            <li><a class="social-button" href="">Youtube</a></li>
-          </ul>
-        </div>
-
+        <ul class="footer-social">
+          <li>
+            <a class="social-button" href="">Twitter</a>
+          </li>
+          <li>
+            <a class="social-button" href="">Facebook</a>
+          </li>
+          <li>
+            <a class="social-button" href="">Youtube</a>
+          </li>
+        </ul>
         <p class="footer-copyright">
           <span>Website by</span>
-          <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy-logo.png" width="" height="" alt="Логотип HTML Academy"></a>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/htmlacademy-logo.png" width="" height="" alt="Логотип HTML Academy">
+          </a>
         </p>
-
       </footer>
-
     </div>
-
   </body>
-
 </html>
