--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Седона, городок, Аризона">
     <meta name="description" content="Седона - небольшой городок в Аризоне, заслуживающий большего">
     <title>HTML Academy: Седона</title>
   </head>
-
   <body>
     <div class="all-content">
-
 <!-- Header -->
-
       <header class="main-header">
         <nav class="main-header__navigation">
           <a href="index.html">
-            <img src="img/logo.png" width="" height="" alt="Логотип City of Sedona">
+            <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип City of Sedona">
           </a>
           <ul class="main-header__site-navigation">
             <li>
               <a href="information.html">Информация</a>
             </li>
             <li>
-              <a href="photo and video.html">Фото и видео</a>
+              <a href="photo-and-video.html">Фото и видео</a>
             </li>
             <li>
-              <a href="state map.html">Карта штата</a>
+              <a href="state-map.html">Карта штата</a>
             </li>
             <li>
               <a href="hotels.html">Гостиницы</a>
@@ -34,26 +30,22 @@
           </ul>
         </nav>
       </header>
-
 <!-- Main -->
-
       <main>
         <div class="banner">
-          <h2 class="visually-hidden">Панорама каньона Седоны</h2>
-          <img src="img/greeting.svg" width="" height="" alt="Welcome to the gorgeous Sedona, because the Grand canyon sucks">
+          <img src="img/intro-welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona, because the Grand canyon sucks">
         </div>
         <section class="intro">
           <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
           <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </section>
-
         <section class="reason-block">
           <ul class="reason-block__list">
             <li class="reason-block__item">
               <h3>Настоящий городок</h3>
               <span class="dashes">№1</span>
               <p>Седона - не аттракцион для туристов, там течёт жизнь</p>
-              <img src="img/city.jpg" width="" height="" alt="Фотография улицы Седоны">
+              <img src="img/real-city.jpg" width="800" height="256" alt="Фотография улицы Седоны">
             </li>
             <li class="reason-block__item">
               <h3>Жильё</h3>
@@ -68,7 +60,7 @@
               <p>Не только китайского, но и местного производства</p>
             </li>
             <li class="reason-block__item">
-              <img src="img/devil bridge.jpg" width="" height="" alt="Фотография моста дьявола">
+              <img src="img/devil's-bridge.jpg" width="800" height="256" alt="Фотография моста дьявола">
               <h3>Там есть мост дьявола</h3>
               <span class="dashes">№2</span>
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
@@ -97,9 +89,7 @@
           <img src="img/map.jpg" width="" height="" alt="Карта Седоны и окрестностей">
         </section>
       </main>
-
 <!-- Footer -->
-
       <footer class="main-footer main-footer-opacity">
         <p class="hashtag">#visitsedona</p>
         <ul class="footer-social">
@@ -115,7 +105,7 @@
         </ul>
         <p class="footer-copyright">
           <span>Website by</span>
-          <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy-logo.png" width="" height="" alt="Логотип HTML Academy"></a>
+          <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.png" width="113" height="39" alt="Логотип HTML Academy"></a>
         </p>
       </footer>
     </div>
