--- a/hotels.html
+++ b/hotels.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Седона, гостиницы">
     <meta name="description" content="Поиск гостиниц в Седоне">
     <title>HTML Academy: Седона</title>
   </head>
-
   <body>
     <div class="all-content">
-
 <!-- Header -->
-
       <header class="main-header">
         <nav class="main-header__navigation">
           <a href="index.html">
-            <img src="img/logo.png" width="" height="" alt="Логотип City of Sedona">
+            <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип City of Sedona">
           </a>
           <ul class="main-header__site-navigation">
             <li>
@@ -34,9 +30,7 @@
           </ul>
         </nav>
       </header>
-
 <!-- Main -->
-
       <main>
         <section class="hotel-search-form">
           <h2 class="visually-hidden">Форма поиска</h2>
@@ -56,7 +50,7 @@
               <p>От 4000 р</p>
               <a class="button button-blue" href="#">Подробнее</a>
               <a class="button button-brown" href="#">Забронировать</a>
-              <div class="4stars"></div>
+              <p class="star-container four-star-container"></p>
               <span class="rating">Рейтинг: 8,5</span>
             </li>
             <li class="hotels-list-item">
@@ -66,7 +60,7 @@
               <p>От 3000 р</p>
               <a class="button button-blue" href="#">Подробнее</a>
               <a class="button button-brown" href="#">Забронировать</a>
-              <div class="3stars"></div>
+              <p class="star-container three-star-container"></p>
               <span class="rating">Рейтинг: 8,9</span>
             </li>
             <li class="hotels-list-item">
@@ -76,15 +70,13 @@
               <p>От 2000 р</p>
               <a class="button button-blue" href="#">Подробнее</a>
               <a class="button button-brown" href="#">Забронировать</a>
-              <div class="2stars"></div>
+              <p class="star-container two-star-container"></p>
               <span class="rating">Рейтинг: 9,2</span>
             </li>
           </ul>
         </section>
       </main>
-
 <!-- Footer -->
-
       <footer class="main-footer">
         <p class="hashtag">#visitsedona</p>
         <ul class="footer-social">
@@ -101,7 +93,7 @@
         <p class="footer-copyright">
           <span>Website by</span>
           <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/htmlacademy-logo.png" width="" height="" alt="Логотип HTML Academy">
+            <img src="img/logo-htmlacademy.png" width="113" height="39" alt="Логотип HTML Academy">
           </a>
         </p>
       </footer>
