--- a/hotels.html
+++ b/hotels.html
@@ -10,21 +10,21 @@
     <div class="all-content">
 <!-- Header -->
       <header class="main-header">
-        <nav class="main-header__navigation">
+        <nav class="navigation">
           <a href="index.html">
             <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип City of Sedona">
           </a>
-          <ul class="main-header__site-navigation">
-            <li>
+          <ul class="navigation__site-navigation">
+            <li class="navigation__item">
               <a href="information.html">Информация</a>
             </li>
-            <li>
-              <a href="photo and video.html">Фото и видео</a>
+            <li class="navigation__item">
+              <a href="photo-and-video.html">Фото и видео</a>
             </li>
-            <li>
-              <a href="state map.html">Карта штата</a>
+            <li class="navigation__item">
+              <a href="state-map.html">Карта штата</a>
             </li>
-            <li class="main-header__site-navigation_current">
+            <li class="navigation__item navigation__item_display_current">
               <a href="hotels.html">Гостиницы</a>
             </li>
           </ul>
@@ -44,7 +44,7 @@
           <h2 class="visually-hidden">Результаты поиска</h2>
           <ul class="hotels-list">
             <li class="hotels-list-item">
-              <img src="img/amara resort and spa.jpg" width="" height="" alt="Фотография отеля Amara resort and spa">
+              <img src="img/amara-resort-and-spa.jpg" width="135" height="90" alt="Фотография отеля Amara resort and spa">
               <h3>Amara resort &amp; spa</h3>
               <p>Гостиница</p>
               <p>От 4000 р</p>
@@ -54,7 +54,7 @@
               <span class="rating">Рейтинг: 8,5</span>
             </li>
             <li class="hotels-list-item">
-              <img src="img/desert quail inn.jpg" width="" height="" alt="Фотография мотеля Desert quail inn">
+              <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="Фотография мотеля Desert quail inn">
               <h3>Desert quail inn</h3>
               <p>Мотель</p>
               <p>От 3000 р</p>
@@ -64,7 +64,7 @@
               <span class="rating">Рейтинг: 8,9</span>
             </li>
             <li class="hotels-list-item">
-              <img src="img/villas at poco diablo.jpg" width="" height="" alt="Фотография апартаментов Villas at poco diablo">
+              <img src="img/villas-at-poco-diablo.jpg" width="135" height="90" alt="Фотография апартаментов Villas at poco diablo">
               <h3>Villas at poco diablo</h3>
               <p>Апартаменты</p>
               <p>От 2000 р</p>
@@ -81,19 +81,19 @@
         <p class="hashtag">#visitsedona</p>
         <ul class="footer-social">
           <li>
-            <a class="social-button" href="">Twitter</a>
+            <a class="social-button" href="#">Twitter</a>
           </li>
           <li>
-            <a class="social-button" href="">Facebook</a>
+            <a class="social-button" href="#">Facebook</a>
           </li>
           <li>
-            <a class="social-button" href="">Youtube</a>
+            <a class="social-button" href="#">Youtube</a>
           </li>
         </ul>
         <p class="footer-copyright">
           <span>Website by</span>
           <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo-htmlacademy.png" width="113" height="39" alt="Логотип HTML Academy">
+            <img src="img/logo-htmlacademy.svg" width="113" height="39" alt="Логотип HTML Academy">
           </a>
         </p>
       </footer>
