--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <div class="all-content">
 <!-- Header -->
       <header class="main-header">
-        <nav class="main-header__navigation">
+        <nav class="navigation">
           <a href="index.html">
             <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип City of Sedona">
           </a>
-          <ul class="main-header__site-navigation">
-            <li>
+          <ul class="navigation__site-navigation">
+            <li class="navigation__item">
               <a href="information.html">Информация</a>
             </li>
-            <li>
+            <li class="navigation__item">
               <a href="photo-and-video.html">Фото и видео</a>
             </li>
-            <li>
+            <li class="navigation__item">
               <a href="state-map.html">Карта штата</a>
             </li>
-            <li>
+            <li class="navigation__item">
               <a href="hotels.html">Гостиницы</a>
             </li>
           </ul>
@@ -39,43 +39,43 @@
           <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
           <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </section>
-        <section class="reason-block">
-          <ul class="reason-block__list">
-            <li class="reason-block__item">
-              <h3>Настоящий городок</h3>
-              <span class="dashes">№1</span>
-              <p>Седона - не аттракцион для туристов, там течёт жизнь</p>
-              <img src="img/real-city.jpg" width="800" height="256" alt="Фотография улицы Седоны">
-            </li>
-            <li class="reason-block__item">
+        <section class="reasons-and-features">
+          <div class="single-reason">
+                <h3>Настоящий городок</h3>
+                <span class="dashes">№1</span>
+                <p>Седона - не аттракцион для туристов, там течёт жизнь</p>
+          </div>
+          <ul class="features-list">
+            <li class="features-list__item">
               <h3>Жильё</h3>
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
-            <li class="reason-block__item">
+            <li class="features-list__item">
               <h3>Еда</h3>
               <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="reason-block__item">
+            <li class="features-list__item">
               <h3>Сувениры</h3>
               <p>Не только китайского, но и местного производства</p>
             </li>
-            <li class="reason-block__item">
-              <img src="img/devil's-bridge.jpg" width="800" height="256" alt="Фотография моста дьявола">
-              <h3>Там есть мост дьявола</h3>
-              <span class="dashes">№2</span>
-              <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-            </li>
-            <li class="reason-block__item">
+          </ul>
+          <div class="single-reason">
+            <h3>Там есть мост дьявола</h3>
+            <span class="dashes">№2</span>
+            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          </div>
+          <ul class="reasons-list">
+            <li class="reasons-list__item">
               <h3>Небольшая площадь</h3>
               <span class="dashes">№3</span>
               <p>Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="reason-block__item">
+            <li class="reasons-list__item">
               <h3>Красивая дорога</h3>
               <span class="dashes">№4</span>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно</p>
             </li>
-            <li class="reason-block__item">
+            <li class="reasons-list__item">
               <h3>Мало туристов</h3>
               <span class="dashes">№5</span>
               <p>Большинство едет в Гранд Каньон и толпится там</p>
@@ -83,11 +83,13 @@
           </ul>
         </section>
         <section class="hotel-search">
+          <h2 class="visually-hidden">Поиск гостиницы</h2>
           <b>Заинтересовались?</b>
           <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
           <span class="button button-brown">Поиск гостиницы в Седоне</span>
-          <img src="img/map.jpg" width="" height="" alt="Карта Седоны и окрестностей">
         </section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d498731.4973305329!2d-111.9262436404703!3d34.7931689787591!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1549123246517" width="1200" height="595" frameborder="0" style="border:0" allowfullscreen></iframe>
+<!-- W3C Validator ругается и пишет "The frameborder attribute on the iframe element is obsolete. Use CSS instead." Когда начнем стилизацию уберу этот атрибут и пропишу в стилях -->
       </main>
 <!-- Footer -->
       <footer class="main-footer main-footer-opacity">
@@ -105,7 +107,9 @@
         </ul>
         <p class="footer-copyright">
           <span>Website by</span>
-          <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.png" width="113" height="39" alt="Логотип HTML Academy"></a>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/logo-htmlacademy.svg" width="113" height="39" alt="Логотип HTML Academy">
+          </a>
         </p>
       </footer>
     </div>
