Вставил попап и вставил где надо кнопки

--- a/hotels.html
+++ b/hotels.html
@@ -80,14 +80,14 @@
       <footer class="main-footer">
         <p class="hashtag">#visitsedona</p>
         <ul class="footer-social">
-          <li>
-            <a class="social-button" href="#">Twitter</a>
+          <li class="footer-social__item">
+            <a class="footer-social__social-button footer-social__social-button_twitter" href="#">Twitter</a>
           </li>
-          <li>
-            <a class="social-button" href="#">Facebook</a>
+          <li class="footer-social__item">
+            <a class="footer-social__social-button footer-social__social-button_facebook" href="#">Facebook</a>
           </li>
-          <li>
-            <a class="social-button" href="#">Youtube</a>
+          <li class="footer-social__item">
+            <a class="footer-social__social-button_youtube" href="#">Youtube</a>
           </li>
         </ul>
         <p class="footer-copyright">
