--- a/hotels.html
+++ b/hotels.html
@@ -5,6 +5,8 @@
     <meta name="keywords" content="Седона, гостиницы">
     <meta name="description" content="Поиск гостиниц в Седоне">
     <title>HTML Academy: Седона</title>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="all-content">
@@ -81,13 +83,13 @@
         <p class="hashtag">#visitsedona</p>
         <ul class="footer-social">
           <li class="footer-social__item">
-            <a class="footer-social__social-button footer-social__social-button_twitter" href="#">Twitter</a>
+            <a class="footer-social__link footer-social__link--twitter" href="#">Twitter</a>
           </li>
           <li class="footer-social__item">
-            <a class="footer-social__social-button footer-social__social-button_facebook" href="#">Facebook</a>
+            <a class="footer-social__link footer-social__link--facebook" href="#">Facebook</a>
           </li>
           <li class="footer-social__item">
-            <a class="footer-social__social-button_youtube" href="#">Youtube</a>
+            <a class="footer-social__link footer-social__link--youtube" href="#">Youtube</a>
           </li>
         </ul>
         <p class="footer-copyright">
