Черновой вариант главной страницы
Черновой вариант главной страницы.

- В хэдере пока не разобрался как правильнее раскидать пункты меню.
- Не понял почему белая маска не прилегает к низу блока с большим фоновым изображением
- не успел стилизовать попап и в футере застрял на логотипе академии и социальных кнопках. Кнопки тоже флексбоксами делать?

--- a/hotels.html
+++ b/hotels.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="Седона, гостиницы">
     <meta name="description" content="Поиск гостиниц в Седоне">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -26,7 +27,7 @@
             <li class="navigation__item">
               <a href="state-map.html">Карта штата</a>
             </li>
-            <li class="navigation__item navigation__item_display_current">
+            <li class="navigation__item navigation__item--current">
               <a href="hotels.html">Гостиницы</a>
             </li>
           </ul>
