--- a/hotels.html
+++ b/hotels.html
@@ -48,33 +48,37 @@
           <ul class="hotels-list">
             <li class="hotels-list-item">
               <img src="img/amara-resort-and-spa.jpg" width="135" height="90" alt="Фотография отеля Amara resort and spa">
-              <h3>Amara resort &amp; spa</h3>
-              <p>Гостиница</p>
-              <p>От 4000 р</p>
-              <a class="button button-blue" href="#">Подробнее</a>
-              <a class="button button-brown" href="#">Забронировать</a>
-              <p class="star-container four-star-container"></p>
-              <span class="rating">Рейтинг: 8,5</span>
+              <h3 class="hotels-list-item__name">
+                <a href="#">Amara resort &amp; spa</a>
+              </h3>
+              <p class="hotels-list-item__info hotels-list-item__info--residence-type">Гостиница</p>
+              <p class="hotels-list-item__info hotels-list-item__info--price">От 4000 р</p>
+              <a class="hotels-list-item__button hotels-list-item__button--details" href="#">Подробнее</a>
+              <a class="hotels-list-item__button hotels-list-item__button--booking" href="#">Забронировать</a>
+              <p class="hotels-list-item__star-container hotels-list-item__star-container--four-stars"></p>
+              <span class="hotels-list-item__rating">Рейтинг: 8,5</span>
             </li>
             <li class="hotels-list-item">
               <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="Фотография мотеля Desert quail inn">
-              <h3>Desert quail inn</h3>
-              <p>Мотель</p>
-              <p>От 3000 р</p>
-              <a class="button button-blue" href="#">Подробнее</a>
-              <a class="button button-brown" href="#">Забронировать</a>
-              <p class="star-container three-star-container"></p>
-              <span class="rating">Рейтинг: 8,9</span>
+              <h3 class="hotels-list-item__name">
+                <a href="#">Desert quail inn</a>
+              </h3>
+              <p class="hotels-list-item__info hotels-list-item__info--residence-type">Мотель</p>
+              <p class="hotels-list-item__info hotels-list-item__info--price">От 3000 р</p>
+              <a class="hotels-list-item__button hotels-list-item__button--details" href="#">Подробнее</a>
+              <a class="hotels-list-item__button hotels-list-item__button--booking" href="#">Забронировать</a>
+              <p class="hotels-list-item__star-container hotels-list-item__star-container--three-stars"></p>
+              <span class="hotels-list-item__rating">Рейтинг: 8,9</span>
             </li>
             <li class="hotels-list-item">
               <img src="img/villas-at-poco-diablo.jpg" width="135" height="90" alt="Фотография апартаментов Villas at poco diablo">
-              <h3>Villas at poco diablo</h3>
-              <p>Апартаменты</p>
-              <p>От 2000 р</p>
-              <a class="button button-blue" href="#">Подробнее</a>
-              <a class="button button-brown" href="#">Забронировать</a>
-              <p class="star-container two-star-container"></p>
-              <span class="rating">Рейтинг: 9,2</span>
+              <h3 class="hotels-list-item__name"><a href="#">Villas at poco diablo</a></h3>
+              <p class="hotels-list-item__info hotels-list-item__info--residence-type">Апартаменты</p>
+              <p class="hotels-list-item__info hotels-list-item__info--price">От 2000 р</p>
+              <a class="hotels-list-item__button hotels-list-item__button--details" href="#">Подробнее</a>
+              <a class="hotels-list-item__button hotels-list-item__button--booking" href="#">Забронировать</a>
+              <p class="hotels-list-item__star-container hotels-list-item__star-container--two-stars"></p>
+              <span class="hotels-list-item__rating">Рейтинг: 9,2</span>
             </li>
           </ul>
         </section>
