--- a/hotels.html
+++ b/hotels.html
@@ -7,14 +7,13 @@
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.min.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="all-content">
-<!-- Header -->
       <header class="main-header">
         <nav class="navigation">
-          <a href="index.html" aria-label="Ссылка на главную страницу">
+          <a href="#" aria-label="Ссылка на главную страницу">
             <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип City of Sedona">
           </a>
           <ul class="navigation__site-navigation">
@@ -33,7 +32,6 @@
           </ul>
         </nav>
       </header>
-<!-- Main -->
       <main>
         <section class="hotels-search-form">
           <h2 class="visually-hidden">Форма поиска</h2>
@@ -215,7 +213,6 @@
           </ul>
         </section>
       </main>
-<!-- Footer -->
       <footer class="main-footer">
         <p class="hashtag">#visitsedona</p>
         <ul class="footer-social">
