--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.min.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="all-content">
-<!-- Header -->
       <header class="main-header">
         <nav class="navigation">
           <a href="index.html" >
@@ -33,7 +32,6 @@
           </ul>
         </nav>
       </header>
-<!-- Main -->
       <main>
         <div class="banner">
           <img src="img/intro-welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona, because the Grand canyon sucks">
@@ -145,7 +143,6 @@
           </section>
         </div>
       </main>
-<!-- Footer -->
       <footer class="main-footer main-footer--opacity">
         <p class="hashtag">#visitsedona</p>
         <ul class="footer-social">
@@ -193,6 +190,6 @@
         </p>
       </footer>
     </div>
-    <script src="js/script.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
