--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.min.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body class="no-js">
+  <body>
     <div class="all-content">
       <header class="main-header">
         <nav class="navigation">
-          <a href="#" >
+          <a href="index.html" >
             <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип City of Sedona">
           </a>
           <ul class="navigation__site-navigation">
@@ -190,6 +190,6 @@
         </p>
       </footer>
     </div>
-    <script src="js/script.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
