--- a/hotels.html
+++ b/hotels.html
@@ -33,6 +33,7 @@
         </nav>
       </header>
       <main>
+        <h1 class="visually-hidden">Поиск гостиниц в Седоне</h1>
         <section class="hotels-search-form">
           <h2 class="visually-hidden">Форма поиска</h2>
           <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
